--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -6,6 +6,18 @@
     <title>{{title}}</title>
 </head>
 <body>
-    {{{body}}}
+    <h1>Product List</h1>
+    {{#each products}}
+        <ul>
+            <ol>
+                <h2>Title: {{this.title}}</h2>
+                <p>Description: {{this.description}}</p>
+                <p>Price: ${{this.price}}</p>
+                <p>Product Code: {{this.code}}</p>
+                <p>Stock: {{this.stock}}</p>
+                <p>Category: {{this.category}}</p>
+            </ol>
+         </ul>
+     {{/each}}
 </body>
 </html>
