--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{title}}</title>
 </head>
 <body>
-    
+    <h1>Product List</h1>
+    {{#each products}}
+        <ul>
+            <ol>
+                <h2>Title: {{this.title}}</h2>
+                <p>Description: {{this.description}}</p>
+                <p>Price: ${{this.price}}</p>
+                <p>Product Code: {{this.code}}</p>
+                <p>Stock: {{this.stock}}</p>
+                <p>Category: {{this.category}}</p>
+            </ol>
+         </ul>
+     {{/each}}
 </body>
 </html>
