--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{!-- <title>{{title}}</title> --}}
+    <title>{{title}}</title>
 </head>
 <body>
     <h1>Product List</h1>
-    {{!-- {{#each products}}
+    {{#each products}}
         <ul>
             <ol>
                 <h2>Title: {{this.title}}</h2>
@@ -18,6 +18,8 @@
                 <p>Category: {{this.category}}</p>
             </ol>
          </ul>
-     {{/each}} --}}
+     {{/each}}
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
