--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -3,22 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
+    <title>Add Product</title>
 </head>
 <body>
+    <h1>Add Product</h1>
+    <form id="addProductForm">
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" required>
+    <br>
+    <label for="description">Description:</label>
+    <textarea id="description" name="description" rows="4" cols="50" required></textarea>
+    <br>
+    <label for="price">Price:</label>
+    <input type="number" id="price" name="price" required>
+    <br>
+    <label for="thumbnail">Thumbnail:</label>
+    <input type="text" id="thumbnail" name="thumbnail" required>
+    <br>
+    <label for="code">Product Code:</label>
+    <input type="text" id="code" name="code" required>
+    <br>
+    <label for="stock">Stock:</label>
+    <input type="number" id="stock" name="stock" required>
+    <br>
+    <label for="status">Status:</label>
+    <select id="status" name="status" required>
+        <option value="true">Available</option>
+        <option value="false">Not Available</option>
+    </select>
+    <br>
+    <label for="category">Category:</label>
+    <input type="text" id="category" name="category" required>
+    <br>
+    <button type="submit">Add Product</button>
+</form>
+
+    
     <h1>Product List</h1>
-    {{#each products}}
-        <ul>
-            <ol>
+    <ul id="productList">
+        {{#each products}}
+            <li>
                 <h2>Title: {{this.title}}</h2>
                 <p>Description: {{this.description}}</p>
                 <p>Price: ${{this.price}}</p>
                 <p>Product Code: {{this.code}}</p>
                 <p>Stock: {{this.stock}}</p>
                 <p>Category: {{this.category}}</p>
-            </ol>
-         </ul>
-     {{/each}}
+            </li>
+        {{/each}}
+    </ul>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
 </body>
