--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -49,6 +49,7 @@
                 <p>Product Code: {{this.code}}</p>
                 <p>Stock: {{this.stock}}</p>
                 <p>Category: {{this.category}}</p>
+                <button class="deleteButton" data-id="{{this.id}}">Delete Product</button>
             </li>
         {{/each}}
     </ul>
