--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -42,7 +42,7 @@
     <h1>Product List</h1>
     <ul id="productList">
         {{#each products}}
-            <li>
+            <li id="{{this.id}}">
                 <h2>Title: {{this.title}}</h2>
                 <p>Description: {{this.description}}</p>
                 <p>Price: ${{this.price}}</p>
