Query without All

--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -14,6 +14,7 @@
                     <p>Description: {{this.description}}</p>
                     <p>Price: ${{this.price}}</p>
                     <p>Product Code: {{this.code}}</p>
+                    <p>Thumbnail: {{this.thumbnail}}</p>
                     <p>Stock: {{this.stock}}</p>
                     <p>Category: {{this.category}}</p>
                 </li>
