--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -16,6 +16,7 @@
                     <p>Product Code: {{this.code}}</p>
                     <p>Thumbnail: {{this.thumbnail}}</p>
                     <p>Stock: {{this.stock}}</p>
+                    <p>Status: {{this.status}}</p>
                     <p>Category: {{this.category}}</p>
                 </li>
             </ul>
