--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -3,23 +3,33 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <title>{{title}}</title>
     </head>
     <body>
         <h1>Product List</h1>
-        {{#each products}}
-            <ul>
-                <li>
-                    <h2>Title: {{this.title}}</h2>
-                    <p>Description: {{this.description}}</p>
-                    <p>Price: ${{this.price}}</p>
-                    <p>Product Code: {{this.code}}</p>
-                    <p>Thumbnail: {{this.thumbnail}}</p>
-                    <p>Stock: {{this.stock}}</p>
-                    <p>Status: {{this.status}}</p>
-                    <p>Category: {{this.category}}</p>
-                </li>
-            </ul>
-        {{/each}}
+            <h2>Page {{page}}</h2>
+                {{#each products}}
+                    <ul>
+                        <li>
+                            <h2>Title: {{this.title}}</h2>
+                            <p>Description: {{this.description}}</p>
+                            <p>Price: ${{this.price}}</p>
+                            <p>Product Code: {{this.code}}</p>
+                            <p>Thumbnail: {{this.thumbnail}}</p>
+                            <p>Stock: {{this.stock}}</p>
+                            <p>Status: {{this.status}}</p>
+                            <p>Category: {{this.category}}</p>
+                        </li>
+                    </ul>
+                {{/each}}
+                {{#if hasPrevPage}}
+                    <a href="{{prevLink}}">Previous</a>
+                {{/if}}
+
+                {{#if hasNextPage}}
+                    <a href="{{nextLink}}">Next</a>
+                {{/if}}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
