--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -23,12 +23,12 @@
                         </li>
                     </ul>
                 {{/each}}
-                {{#if hasPrevPage}}
-                    <a href="{{prevLink}}">Previous</a>
+                {{#if prevPage}}
+                    <a href="{{prevPage}}" id="prevLink">Previous</a>
                 {{/if}}
 
-                {{#if hasNextPage}}
-                    <a href="{{nextLink}}">Next</a>
+                {{#if nextPage}}
+                    <a href="{{nextPage}}" id="nextLink">Next</a>
                 {{/if}}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
