Handlebars and Products/Carts

--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -9,6 +9,7 @@
     <body>
         <h1>Product List</h1>
             <h2>Page {{page}}</h2>
+            <div id="product-list" data-cart-id="{{cartId}}">
                 {{#each products}}
                     <ul>
                         <li>
@@ -20,6 +21,7 @@
                             <p>Stock: {{this.stock}}</p>
                             <p>Status: {{this.status}}</p>
                             <p>Category: {{this.category}}</p>
+                            <button type="button" id="button" class="btn btn-primary add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
                         </li>
                     </ul>
                 {{/each}}
@@ -30,6 +32,8 @@
                 {{#if nextPage}}
                     <a href="{{nextPage}}" id="nextLink">Next</a>
                 {{/if}}
+            </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
