--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -7,24 +7,22 @@
         <title>{{title}}</title>
     </head>
     <body>
-        <h1>Product List</h1>
-            <h2>Page {{page}}</h2>
-                {{#each products}}
-                    <ul>
-                        <li>
-                            <h2>Title: {{this.title}}</h2>
-                            <p>Description: {{this.description}}</p>
-                            <p>Price: ${{this.price}}</p>
-                            <p>Product Code: {{this.code}}</p>
-                            <p>Thumbnail: {{this.thumbnail}}</p>
-                            <p>Stock: {{this.stock}}</p>
-                            <p>Status: {{this.status}}</p>
-                            <p>Category: {{this.category}}</p>
-                        </li>
-                    </ul>
-                {{/each}}
-            </div>
+        <div>Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!!!</div>
+            {{#each products}}
+            <ul>
+                <li>
+                    <h2>Title: {{this.title}}</h2>
+                    <p>Description: {{this.description}}</p>
+                    <p>Price: ${{this.price}}</p>
+                    <p>Product Code: {{this.code}}</p>
+                    <p>Thumbnail: {{this.thumbnail}}</p>
+                    <p>Stock: {{this.stock}}</p>
+                    <p>Status: {{this.status}}</p>
+                    <p>Category: {{this.category}}</p>
+                </li>
+            </ul>
+            {{/each}}            
+        </div>        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="/js/index.js"></script>
     </body>
 </html>
