--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Login Form</title>
+        <title>Register Form</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body class="d-flex justify-content-center align-items-center">
-        <form class="box" method="post" action="/api/sessions/login">
-            <h3>Login Form</h3>
+        <form class="box" method="post" action="/api/sessions/register">
+            <h3>Register Form</h3>
             <div class="form-group">
                     <label for="user">User</label>
                     <input type="user" class="form-control" name="user" id="user">
@@ -17,13 +17,13 @@
                     <label for="password">Password</label>
                     <input type="password" class="form-control" name="password" id="password">
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
-                <div><a href="/register" target="_self">Register</a></div>
+                <button type="submit" class="btn btn-primary">Register</button>
+                <div><a href="/login" target="_self">Login</a></div>
             </form>
 
-            {{#if failLogin}}
+            {{#if failRegister}}
                 <script type="text/javascript">
-                    alert('Login Failed!');
+                    alert('Register Failed!');
                 </script>
             {{/if}}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
