--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body class="d-flex justify-content-center align-items-center">
-        <form class="box" method="post" action="/api/sessions/login">
+        <form class="box" method="post" action="/login">
             <h3>Login Form</h3>
             <div class="form-group">
                     <label for="user">User</label>
