--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Register Form</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    </head>
-    <body class="d-flex justify-content-center align-items-center">
-        <form class="box" method="post" action="/register">
-            <h3>Register Form</h3>
-            <div class="form-group">
-                    <label for="user">User</label>
-                    <input type="user" class="form-control" name="user" id="user">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password">
-                </div>
-                <button type="submit" class="btn btn-primary">Register</button>
-                <div><a href="/login" target="_self">Login</a></div>
-            </form>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Register Form</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   </head>
+   <body>
+      <section class="bg-primary p-3 p-md-4 p-xl-5">
+         <div class="container">
+            <div class="row justify-content-center">
+               <div class="col-12 col-md-9 col-lg-7 col-xl-6 col-xxl-5">
+                  <div class="card border-0 shadow-sm rounded-4">
+                     <div class="card-body p-3 p-md-4 p-xl-5">
+                        <div class="row">
+                           <div class="col-12">
+                              <div class="mb-5">
+                                 <h3>Register Form</h3>
+                              </div>
+                           </div>
+                        </div>
+                        <form method="post" action="/register">
+                           <div class="row gy-3 overflow-hidden">
+                              <div class="col-12">
+                                 <div class="form-floating mb-3">
+                                    <input type="user" class="form-control" name="user" id="user">
+                                    <label for="user">User</label>
+                                 </div>
+                              </div>
+                              <div class="col-12">
+                                 <div class="form-floating mb-3">
+                                    <input type="password" class="form-control" name="password" id="password">
+                                    <label for="password">Password</label>
+                                 </div>
+                              </div>
+                              <div class="col-12">
+                                 <div class="d-grid">
+                                    <button type="submit" class="btn btn-primary">Register</button>
+                                 </div>
+                              </div>
+                           </div>
+                        </form>
+                        <div class="row">
+                           <div class="col-12">
+                              <hr class="mt-5 mb-4 border-secondary-subtle">
+                              <div class="d-grid">
+                                 <a class="link-body-emphasis link-offset-2 link-underline-opacity-0 link-underline-opacity-0-hover" href="/login" target="_self">
+                                 <button type="submit" class="btn btn-info w-100">
+                                 Login
+                                 </button>
+                                 </a>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      
+      {{#if failRegister}}
+      <script type="text/javascript">
+         alert('Register Failed, User exists!');
+      </script>
+      {{/if}}
 
-            {{#if failRegister}}
-                <script type="text/javascript">
-                    alert('Register Failed, User exists!');
-                </script>
-            {{/if}}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </body>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   </body>
 </html>
