--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -46,8 +46,8 @@
                               <hr class="mt-5 mb-4 border-secondary-subtle">
                               <div class="d-grid">
                                  <a class="link-body-emphasis link-offset-2 link-underline-opacity-0 link-underline-opacity-0-hover" href="/register" target="_self">
-                                 <button type="submit" class="btn btn-info w-100">
-                                 Register
+                                 <button  class="btn btn-info w-100">
+                                    Register
                                  </button>
                                  </a>
                               </div>
