--- a/src/views/realTimeProductsView.handlebars
+++ b/src/views/realTimeProductsView.handlebars
@@ -7,6 +7,11 @@
     </head>
     <body>
         <h1>Add Product</h1>
+        {{#if user}}
+            <h3>Welcome back, {{ user.first_name }}{{ user.last_name }}</h3>
+        {{else}}
+            <h3>Welcome, Guest</h3>
+        {{/if}}
         <form id="addProductForm">
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" required>
