--- a/src/views/realTimeProductsView.handlebars
+++ b/src/views/realTimeProductsView.handlebars
@@ -46,14 +46,14 @@
         <h1>Product List</h1>
         <ul id="productList">
             {{#each products}}
-                <li id="{{this.id}}">
+                <li id="{{this._id}}">
                     <h2>Title: {{this.title}}</h2>
                     <p>Description: {{this.description}}</p>
                     <p>Price: ${{this.price}}</p>
                     <p>Product Code: {{this.code}}</p>
                     <p>Stock: {{this.stock}}</p>
                     <p>Category: {{this.category}}</p>
-                    <button class="deleteButton" data-id="{{this.id}}">Delete Product</button>
+                    <button class="deleteButton" data-id="{{this._id}}">Delete Product</button>
                 </li>
             {{/each}}
         </ul>
