--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -7,33 +7,24 @@
         <title>{{title}}</title>
     </head>
     <body>
-        <h1>Product List</h1>
-            <h2>Page {{page}}</h2>
-            <div id="product-list" data-cart-id="{{cartId}}">
-                {{#each products}}
-                    <ul>
-                        <li>
-                            <h2>Title: {{this.title}}</h2>
-                            <p>Description: {{this.description}}</p>
-                            <p>Price: ${{this.price}}</p>
-                            <p>Product Code: {{this.code}}</p>
-                            <p>Thumbnail: {{this.thumbnail}}</p>
-                            <p>Stock: {{this.stock}}</p>
-                            <p>Status: {{this.status}}</p>
-                            <p>Category: {{this.category}}</p>
-                            <button type="button" id="button" class="btn btn-primary add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
-                        </li>
-                    </ul>
-                {{/each}}
-                {{#if prevPage}}
-                    <a href="{{prevPage}}" id="prevLink">Previous</a>
-                {{/if}}
-
-                {{#if nextPage}}
-                    <a href="{{nextPage}}" id="nextLink">Next</a>
-                {{/if}}
-            </div>
+        <div>Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!!!</div>
+        <small>{{#if isLoggedIn}}Role: {{role}}{{/if}}</small>
+        {{#if isLoggedIn}}<div><a href="/logout">Logout</a></div>{{/if}}
+            {{#each products}}
+            <ul>
+                <li>
+                    <h2>Title: {{this.title}}</h2>
+                    <p>Description: {{this.description}}</p>
+                    <p>Price: ${{this.price}}</p>
+                    <p>Product Code: {{this.code}}</p>
+                    <p>Thumbnail: {{this.thumbnail}}</p>
+                    <p>Stock: {{this.stock}}</p>
+                    <p>Status: {{this.status}}</p>
+                    <p>Category: {{this.category}}</p>
+                </li>
+            </ul>
+            {{/each}}            
+        </div>        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="/js/index.js"></script>
     </body>
 </html>
