--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -51,6 +51,7 @@
                     <p>Stock: {{this.stock}}</p>
                     <p>Status: {{this.status}}</p>
                     <p>Category: {{this.category}}</p>
+                    <button class="deleteButton" data-id="{{this._id}}">Delete Product</button>
                 </li>
             </ul>
             {{/each}}            
