--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -8,9 +8,9 @@
     </head>
     <body>
         <h1>Product List</h1>
-            {{!-- <div>Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!!!</div>
+            <div>Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!!!</div>
             <small>{{#if isLoggedIn}}Role: {{role}}{{/if}}</small>
-            {{#if isLoggedIn}}<div><a href="/logout">Logout</a></div>{{/if}} --}}
+            {{#if isLoggedIn}}<div><a href="/logout">Logout</a></div>{{/if}}
             <form id="addProductForm">
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" required>
