--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -40,7 +40,7 @@
                 <input type="text" id="category" name="category" required>
                 <br>
                 <button type="submit">Add Product</button>
-            </form>    
+            </form>  
             <h2>Page {{page}}</h2>
             <div id="product-list" data-cart-id="{{cartId}}">
                 {{#each products}}
@@ -55,6 +55,8 @@
                             <p>Status: {{this.status}}</p>
                             <p>Category: {{this.category}}</p>
                             <button type="button" id="button" class="btn btn-primary add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+                            <button type="button" id="button" class="btn btn-primary deleteButton" data-product-id="{{this._id}}">Delete Product</button>
+                            <button type="button" id="updateButton" class="btn btn-primary updateButton" data-product-id="{{this._id}}">Update Product</button>
                         </li>
                     </ul>
                 {{/each}}
@@ -67,6 +69,7 @@
                 {{/if}}
             </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="/js/index.js"></script>
     </body>
 </html>
