--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -11,37 +11,42 @@
             <div>Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!!!</div>
             <small>{{#if isLoggedIn}}Role: {{role}}{{/if}}</small>
             {{#if isLoggedIn}}<div><a href="/logout">Logout</a></div>{{/if}}
-            <form id="addProductForm">
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" required>
-                <br>
-                <label for="description">Description:</label>
-                <textarea id="description" name="description" rows="4" cols="50" required></textarea>
-                <br>
-                <label for="price">Price:</label>
-                <input type="number" id="price" name="price" required>
-                <br>
-                <label for="thumbnail">Thumbnail:</label>
-                <input type="text" id="thumbnail" name="thumbnail" required>
-                <br>
-                <label for="code">Product Code:</label>
-                <input type="text" id="code" name="code" required>
-                <br>
-                <label for="stock">Stock:</label>
-                <input type="number" id="stock" name="stock" required>
-                <br>
-                <label for="status">Status:</label>
-                <select id="status" name="status" required>
-                    <option value="true">Available</option>
-                    <option value="false">Not Available</option>
-                </select>
-                <br>
-                <label for="category">Category:</label>
-                <input type="text" id="category" name="category" required>
-                <br>
-                <button type="submit">Add Product</button>
-            </form>  
+            
+            {{#if isAdmin}}
+                <form id="addProductForm">
+                    <label for="title">Title:</label>
+                    <input type="text" id="title" name="title" required>
+                    <br>
+                    <label for="description">Description:</label>
+                    <textarea id="description" name="description" rows="4" cols="50" required></textarea>
+                    <br>
+                    <label for="price">Price:</label>
+                    <input type="number" id="price" name="price" required>
+                    <br>
+                    <label for="thumbnail">Thumbnail:</label>
+                    <input type="text" id="thumbnail" name="thumbnail" required>
+                    <br>
+                    <label for="code">Product Code:</label>
+                    <input type="text" id="code" name="code" required>
+                    <br>
+                    <label for="stock">Stock:</label>
+                    <input type="number" id="stock" name="stock" required>
+                    <br>
+                    <label for="status">Status:</label>
+                    <select id="status" name="status" required>
+                        <option value="true">Available</option>
+                        <option value="false">Not Available</option>
+                    </select>
+                    <br>
+                    <label for="category">Category:</label>
+                    <input type="text" id="category" name="category" required>
+                    <br>
+                    <button type="submit">Add Product</button>
+                </form>  
+            {{/if}}
+
             <h2>Page {{page}}</h2>
+            
             <div id="product-list" data-cart-id="{{cartId}}">
                 {{#each products}}
                     <ul>
@@ -54,9 +59,16 @@
                             <p>Stock: {{this.stock}}</p>
                             <p>Status: {{this.status}}</p>
                             <p>Category: {{this.category}}</p>
-                            <button type="button" id="button" class="btn btn-primary add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
-                            <button type="button" id="button" class="btn btn-primary deleteButton" data-product-id="{{this._id}}">Delete Product</button>
-                            <button type="button" id="updateButton" class="btn btn-primary updateButton" data-product-id="{{this._id}}">Update Product</button>
+                            
+                            {{#if ../isLoggedIn}}
+                                <button type="button" id="button" class="btn btn-primary add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+
+                                {{#if ../isAdmin}}
+                                    <button type="button" id="button" class="btn btn-primary deleteButton" data-product-id="{{this._id}}">Delete Product</button>
+                                    <button type="button" id="updateButton" class="btn btn-primary updateButton" data-product-id="{{this._id}}">Update Product</button>
+                                {{/if}}
+                                
+                            {{/if}}
                         </li>
                     </ul>
                 {{/each}}
