--- a/src/views/registerView.handlebars
+++ b/src/views/registerView.handlebars
@@ -30,6 +30,12 @@
                               </div>
                               <div class="col-12">
                                  <div class="form-floating mb-3">
+                                    <input type="email" class="form-control" name="email" id="email">
+                                    <label for="email">Email</label>
+                                 </div>
+                              </div>
+                              <div class="col-12">
+                                 <div class="form-floating mb-3">
                                     <input type="password" class="form-control" name="password" id="password">
                                     <label for="password">Password</label>
                                  </div>
