--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -75,7 +75,7 @@
                 {{/each}}
                 {{#if isLoggedIn}}
                     <div class="d-flex justify-content-center">
-                        <button type="button" id="button" class="btn btn-primary finishPurchase" data-cart-id="{{cartId}}">Finish Purchase</button>
+                        <button type="button" id="button" class="btn btn-primary finishPurchase" data-product-id="{{productId}}" data-cart-id="{{cartId}}">Finish Purchase</button>
                     </div>
                 {{/if}}
                 {{#if prevPage}}
