--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -48,30 +48,32 @@
     
             <h2>Page {{page}}</h2>
             
-            <div id="product-list" data-cart-id="{{cartId}}">
+            <div id="product-list" data-cart-id="{{cartId}}" class="row">
                 {{#each products}}
-                    <ul>
-                        <li>
-                            <h2>Title: {{this.title}}</h2>
-                            <p>Description: {{this.description}}</p>
-                            <p>Price: ${{this.price}}</p>
-                            <p>Product Code: {{this.code}}</p>
-                            <p>Thumbnail: {{this.thumbnail}}</p>
-                            <p>Stock: {{this.stock}}</p>
-                            <p>Status: {{this.status}}</p>
-                            <p>Category: {{this.category}}</p>
-                            
-                            {{#if ../isLoggedIn}}
-                                <button type="button" id="button" class="btn btn-primary add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
-
-                                {{#if ../isAdmin}}
-                                    <button type="button" id="button" class="btn btn-primary deleteButton" data-product-id="{{this._id}}">Delete Product</button>
-                                    <button type="button" id="updateButton" class="btn btn-primary updateButton" data-product-id="{{this._id}}">Update Product</button>
-                                {{/if}}
+                    <div class="col-3 border">
+                        <ul>
+                            <li>
+                                <h2>Title: {{this.title}}</h2>
+                                <p>Description: {{this.description}}</p>
+                                <p>Price: ${{this.price}}</p>
+                                <p>Product Code: {{this.code}}</p>
+                                <p>Thumbnail: {{this.thumbnail}}</p>
+                                <p>Stock: {{this.stock}}</p>
+                                <p>Status: {{this.status}}</p>
+                                <p>Category: {{this.category}}</p>
                                 
-                            {{/if}}
-                        </li>
-                    </ul>
+                                {{#if ../isLoggedIn}}
+                                    <button type="button" id="button" class="btn btn-primary add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+
+                                    {{#if ../isAdmin}}
+                                        <button type="button" id="button" class="btn btn-primary deleteButton" data-product-id="{{this._id}}">Delete Product</button>
+                                        <button type="button" id="updateButton" class="btn btn-primary updateButton" data-product-id="{{this._id}}">Update Product</button>
+                                    {{/if}}
+                                    
+                                {{/if}}
+                            </li>
+                        </ul>
+                    </div>
                 {{/each}}
                 {{#if isLoggedIn}}
                     <div class="d-flex justify-content-center">
