--- a/src/views/ticketView.handlebars
+++ b/src/views/ticketView.handlebars
@@ -7,11 +7,11 @@
 <p>Purchase Date: {{ticket.purchase_datetime}}</p>
 <p>Ticket Code: {{ticket.code}}</p>
 
-<h3>Products:</h3>
-<ul>
-  {{#ticket.products}}
-  <li>
-    {{product.name}} ({{quantity}} x ${{product.price}})
-  </li>
-  {{/ticket.products}}
-</ul>
+{{#if notProcessed}}
+  <h3>Not processed products:</h3>
+  <ul>
+    {{#each notProcessed}}
+      <li>{{this}}</li>
+    {{/each}}
+  </ul>
+{{/if}}
