--- a/src/views/loginView.handlebars
+++ b/src/views/loginView.handlebars
@@ -16,6 +16,7 @@
             
             <input type="submit" value="Login">
         </form>
+        <p id="recover">Forgot your password? <a href="/products/recover">Recover password</a></p>
         <script src="/js/login.js"></script>
     </body>
 </html>
