--- a/src/views/recoverView.handlebars
+++ b/src/views/recoverView.handlebars
@@ -22,5 +22,6 @@
             <div class="success-message">Check your email for password recovery instructions.</div>
         {{/if}}
         </div>
+         <script src="/js/recover.js"></script>
     </body>
 </html>
