Password and Hash Fix

--- a/src/views/changePasswordView.handlebars
+++ b/src/views/changePasswordView.handlebars
@@ -13,7 +13,7 @@
             <div class="error-message">{{error}}</div>
         {{/if}}
         <form action="/products/changePassword" method="post">
-            <input type="hidden" name="token" value="{{user.token}}">
+            <input type="hidden" name="token" value="{{token}}">
             <label for="newPassword">New Password:</label>
             <input type="password" id="newPassword" name="newPassword" required>
             <button type="submit">Change Password</button>
@@ -22,5 +22,7 @@
             <div class="success-message">Password changed successfully.</div>
         {{/if}}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/js/changePassword.js"></script>
 </body>
 </html>
