--- a/src/views/recoverView.handlebars
+++ b/src/views/recoverView.handlebars
@@ -22,6 +22,7 @@
             <div class="success-message">Check your email for password recovery instructions.</div>
         {{/if}}
         </div>
-         <script src="/js/recover.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="/js/recover.js"></script>
     </body>
 </html>
