--- a/src/views/realTimeProductsView.handlebars
+++ b/src/views/realTimeProductsView.handlebars
@@ -12,6 +12,7 @@
         {{else}}
             <h3>Welcome, Guest</h3>
         {{/if}}
+        {{#if isAdmin}}
         <form id="addProductForm">
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" required>
@@ -42,6 +43,7 @@
             <br>
             <button type="submit">Add Product</button>
         </form>
+        {{/if}}
 
         <h1>Product List</h1>
         <ul id="productList">
