--- a/src/views/realTimeProductsView.handlebars
+++ b/src/views/realTimeProductsView.handlebars
@@ -12,7 +12,7 @@
         {{else}}
             <h3>Welcome, Guest</h3>
         {{/if}}
-        {{#if isAdmin}}
+        {{#if (or (isAdmin user) (isPremium user))}}
         <form id="addProductForm">
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" required>
