--- a/src/views/realTimeProductsView.handlebars
+++ b/src/views/realTimeProductsView.handlebars
@@ -55,6 +55,7 @@
                     <p>Product Code: {{this.code}}</p>
                     <p>Stock: {{this.stock}}</p>
                     <p>Category: {{this.category}}</p>
+                    <p>Owner: {{this.owner}}</p>
                     <button class="deleteButton" data-id="{{this._id}}">Delete Product</button>
                 </li>
             {{/each}}
