--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -16,6 +16,7 @@
                 <p>Product Code: {{this.code}}</p>
                 <p>Stock: {{this.stock}}</p>
                 <p>Category: {{this.category}}</p>
+                <p>Owner: {{this.owner}}</p>
             </li>
          </ul>
      {{/each}}
