--- a/src/views/realTimeProductsView.handlebars
+++ b/src/views/realTimeProductsView.handlebars
@@ -56,6 +56,9 @@
                     <p>Stock: {{this.stock}}</p>
                     <p>Category: {{this.category}}</p>
                     <p>Owner: {{this.owner}}</p>
+                    {{#if (not (and (isPremium ../user) (eq this.owner ../user.email)))}}
+                        <button class="add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+                    {{/if}}
                     {{#if (or (isAdmin ../user) (and (isPremium ../user) (eq this.owner ../user.email)))}}
                         <button class="deleteButton" data-id="{{this._id}}">Delete Product</button>
                     {{/if}}
