--- a/src/views/realTimeProductsView.handlebars
+++ b/src/views/realTimeProductsView.handlebars
@@ -65,6 +65,7 @@
                 </li>
             {{/each}}
         </ul>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/index.js"></script>
     </body>
