--- a/src/views/switchRoleView.handlebars
+++ b/src/views/switchRoleView.handlebars
@@ -8,13 +8,14 @@
     <body>
         <form id="role-switch-form">
             <label for="role">Select new role:</label>
-            <select id="role" name="role">
-                {{#each roles}}
-                <option value="{{this}}">{{this}}</option>
+            <select id="role" name="role" data-user-id="{{user._id}}">
+                {{#each role}}
+                    <option value="{{this}}">{{this}}</option>
                 {{/each}}
             </select>
             <button type="submit">Update Role</button>
         </form>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="/js/roleSwitcher.js"></script>
     </body>
 </html>
