Added Other Docs

--- a/src/views/documentsView.handlebars
+++ b/src/views/documentsView.handlebars
@@ -14,8 +14,14 @@
                 <label for="productImage">Products Image:</label>
                 <input type="file" id="productImage" name="productImage"><br><br>
                 
-                <label for="docs">Documents (max 3):</label>
-                <input type="file" id="docs" name="docs" multiple><br><br>
+                <label for="idDocument">ID Document:</label>
+                <input type="file" id="idDocument" class="docs" name="idDocument"><br><br>
+                
+                <label for="addressDocument">Address Document:</label>
+                <input type="file" id="addressDocument" class="docs"name="addressDocument"><br><br>
+                
+                <label for="statementDocument">Bank Statement:</label>
+                <input type="file" id="statementDocument" class="docs" name="statementDocument"><br><br>
                 
                 <button type="submit">Subir archivos</button>
             </form>
