--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -33,14 +33,14 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="/img/background.jpg" class="d-block w-100" alt="Products">
-                <div class="carousel-caption d-none d-md-block text-dark">
+                <div class="carousel-caption d-flex flex-column justify-content-center align-items-center text-dark" style="bottom: 0; top: 0;">
                     <h5 class="display-4">PRODUCTS</h5>
                     <p class="lead">Your Products are great.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/img/background.jpg" class="d-block w-100" alt="Technology">
-                <div class="carousel-caption d-none d-md-block text-dark">
+                <div class="carousel-caption d-flex flex-column justify-content-center align-items-center text-dark" style="bottom: 0; top: 0;">
                     <h5 class="display-4">TECHNOLOGY</h5>
                     <p class="lead">Technology hack you won't get.</p>
                 </div>
@@ -55,6 +55,7 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+
 
     {{#if isAdmin}}
         <section class="container my-4">
