--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -13,7 +13,7 @@
                 <img src="/img/main-logo.png" alt="Main Logo" class="me-3">
                 
                 <div class="flex-grow-1 text-center">
-                    <h2>MiniStore Home Page</h2>
+                    <h2>Home Page</h2>
                 </div>
                 
                 <div class="d-flex align-items-center">
