--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -75,7 +75,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="thumbnail" class="form-label">Thumbnail:</label>
-                    <input type="text" id="thumbnail" name="thumbnail" class="form-control" required>
+                    <input type="file" id="thumbnail" name="thumbnail" class="form-control" multiple required>
                 </div>
                 <div class="mb-3">
                     <label for="code" class="form-label">Product Code:</label>
