--- a/src/views/loginView.handlebars
+++ b/src/views/loginView.handlebars
@@ -56,6 +56,10 @@
                                     <span class="ms-2 fs-6 text-uppercase">Login with Github</span>
                                 </a>
                             </div>
+                            <div class="text-center mt-4">
+                                <p class="mb-0">Forgot your password?</p>
+                                <a href="/recover" class="btn btn-outline-primary mt-2">Recover Password</a>
+                            </div>
                         </div>
                     </div>
                 </div>
