--- a/src/views/switchRoleView.handlebars
+++ b/src/views/switchRoleView.handlebars
@@ -38,7 +38,7 @@
                                 <h5>{{this.user}}</h5>
                             </div>
                             <div class="d-flex align-items-center">
-                                <select name="role-{{this._id}}" class="form-select me-2" aria-label="Select role">
+                                <select class="form-select me-2" aria-label="Select role" name="role" data-user-id="{{this.id}}">
                                     {{#each ../roles}}
                                         <option value="{{this}}" {{#if (eq this ../this.role)}}selected{{/if}}>{{this}}</option>
                                     {{/each}}
