--- a/src/views/documentsView.handlebars
+++ b/src/views/documentsView.handlebars
@@ -33,23 +33,19 @@
             <form id="uploadForm" class="row g-3">
                 <div class="col-md-6">
                     <label for="profileImage" class="form-label">Profile Image:</label>
-                    <input type="file" id="profileImage" name="profileImage" class="form-control">
-                </div>
-                <div class="col-md-6">
-                    <label for="productImage" class="form-label">Products Image:</label>
-                    <input type="file" id="productImage" name="productImage" class="form-control">
+                    <input type="file" id="profileImage" name="profileImage" class="form-control docs">
                 </div>
                 <div class="col-md-6">
                     <label for="idDocument" class="form-label">ID Document:</label>
-                    <input type="file" id="idDocument" class="form-control" name="idDocument">
+                    <input type="file" id="idDocument" class="form-control docs" name="idDocument">
                 </div>
                 <div class="col-md-6">
                     <label for="addressDocument" class="form-label">Address Document:</label>
-                    <input type="file" id="addressDocument" class="form-control" name="addressDocument">
+                    <input type="file" id="addressDocument" class="form-control docs" name="addressDocument">
                 </div>
                 <div class="col-md-6">
                     <label for="statementDocument" class="form-label">Bank Statement:</label>
-                    <input type="file" id="statementDocument" class="form-control" name="statementDocument">
+                    <input type="file" id="statementDocument" class="form-control docs" name="statementDocument">
                 </div>
                 <div class="col-12 text-center">
                     <button type="submit" class="btn btn-primary">Upload Files</button>
