--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -16,16 +16,27 @@
                     <h2>Home Page</h2>
                 </div>
                 
-                <div class="d-flex align-items-center">
-                    <div class="me-3">Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!</div>
-                    <small class="me-3">{{#if isLoggedIn}}Role: {{role}}{{/if}}</small>
-                    {{#if isLoggedIn}}
-                        <a href="/logout" class="btn btn-outline-danger">Logout</a>
-                    {{else}}
-                        <a href="/login" class="btn btn-outline-primary">Login</a>
-                    {{/if}}
+                <div class="d-flex flex-column align-items-start">
+                    <div class="d-flex align-items-center mb-1">
+                        <div class="me-3">
+                            Welcome {{#if isLoggedIn}}{{user}}{{else}}user{{/if}}!
+                        </div>
+                        {{#if isLoggedIn}}
+                            <small class="me-3">Role: {{role}}</small>
+                        {{/if}}
+                    </div>
+                    <div class="d-flex align-items-center mt-2">
+                        {{#if isAdmin}}
+                            <a href="/switcher" class="btn btn-secondary btn-sm me-2">Switcher</a>
+                        {{/if}}
+                        {{#if isLoggedIn}}
+                            <a href="/logout" class="btn btn-outline-danger btn-sm">Logout</a>
+                        {{else}}
+                            <a href="/login" class="btn btn-outline-primary btn-sm">Login</a>
+                        {{/if}}
+                    </div>
                 </div>
-            </div>
+
         </div>
     </header>
 
