--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -123,6 +123,7 @@
                             <p class="card-text">Stock: {{this.stock}}</p>
                             <p class="card-text">Status: {{this.status}}</p>
                             <p class="card-text">Category: {{this.category}}</p>
+                            <p class="card-text">Owner: {{this.owner}}</p>
                             {{#if ../isLoggedIn}}
                                 <button type="button" class="btn btn-primary me-2 mb-2 add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
                                 {{#if ../isAdmin}}
