--- a/src/views/mockingView.handlebars
+++ b/src/views/mockingView.handlebars
@@ -21,6 +21,7 @@
                                 <p>Stock: {{this.stock}}</p>
                                 <p>Status: {{this.status}}</p>
                                 <p>Category: {{this.category}}</p>
+                                <p>Owner: {{this.owner}}</p>
                             </li>
                         </ul>
                     </div>
