--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -124,8 +124,10 @@
                             <p class="card-text">Status: {{this.status}}</p>
                             <p class="card-text">Category: {{this.category}}</p>
                             <p class="card-text">Owner: {{this.owner}}</p>
-                            {{#if (or ../isAdmin ../isLoggedIn (eq this.owner ../user.email))}}
-                                <button type="button" class="btn btn-primary me-2 mb-2 add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+                            {{#if ../isLoggedIn}}
+                                {{#if (not (and (isPremium) (eq this.owner ../myUser.email)))}}
+                                    <button type="button" class="btn btn-primary me-2 mb-2 add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
+                                {{/if}}
                                 {{#if ../isAdmin}}
                                     <button type="button" class="btn btn-danger me-2 mb-2 deleteButton" data-product-id="{{this._id}}">Delete Product</button>
                                     <button type="button" class="btn btn-warning me-2 mb-2 updateButton" data-product-id="{{this._id}}">Update Product</button>
