--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -67,7 +67,6 @@
         </button>
     </div>
 
-
     {{#if (or isAdmin isPremium)}}
         <section class="container my-4">
             <h2>Add New Product</h2>
@@ -124,15 +123,17 @@
                             <p class="card-text">Status: {{this.status}}</p>
                             <p class="card-text">Category: {{this.category}}</p>
                             <p class="card-text">Owner: {{this.owner}}</p>
+
                             {{#if ../isLoggedIn}}
-                                {{#if (not (and (isPremium) (eq this.owner ../myUser.email)))}}
+                                {{#if (and (not (eq this.owner ../myUser.email)) (not (isPremium)))}}
                                     <button type="button" class="btn btn-primary me-2 mb-2 add-to-cart-btn" data-product-id="{{this._id}}" data-cart-id="{{cartId}}">Add to Cart</button>
                                 {{/if}}
-                                {{#if ../isAdmin}}
+                                {{#if (or ../isAdmin (and ../isPremium (eq this.owner ../myUser.email)))}}
                                     <button type="button" class="btn btn-danger me-2 mb-2 deleteButton" data-product-id="{{this._id}}">Delete Product</button>
                                     <button type="button" class="btn btn-warning me-2 mb-2 updateButton" data-product-id="{{this._id}}">Update Product</button>
                                 {{/if}}
                             {{/if}}
+
                         </div>
                     </div>
                 </div>
