--- a/src/views/switchRoleView.handlebars
+++ b/src/views/switchRoleView.handlebars
@@ -30,12 +30,12 @@
         <main class="container my-4">
             <h2 class="text-center">Change User Roles</h2>
             {{#if isAdmin}}
-                <form id="role-switch-form">
+                <form id="role-switch-form" class="fs-6">
                     <div class="list-group">
                         {{#each users}}
-                            <div class="list-group-item d-flex justify-content-between align-items-center">
-                                <div>
-                                    <h5>{{this.user}}</h5>
+                            <div class="list-group-item d-flex justify-content-between align-items-center mb-2">
+                                <div class="me-3">
+                                    <h5 class="fs-6">{{this.user}}</h5>
                                 </div>
                                 <div class="d-flex align-items-center">
                                     <select class="form-select me-2" aria-label="Select role" name="role" data-user-id="{{this._id}}">
@@ -43,7 +43,8 @@
                                             <option value="{{this}}" {{#if (eq this ../this.role)}}selected{{/if}}>{{this}}</option>
                                         {{/each}}
                                     </select>
-                                    <button type="submit" class="btn btn-primary">Update Role</button>
+                                    <button type="submit" class="btn btn-primary me-2">Update Role</button>
+                                    <button type="button" class="btn btn-danger" data-user-id="{{this._id}}">Delete User</button>
                                 </div>
                             </div>
                         {{/each}}
