--- a/src/views/homeView.handlebars
+++ b/src/views/homeView.handlebars
@@ -140,7 +140,7 @@
             {{/each}}
             {{#if isLoggedIn}}
                 <div class="d-flex justify-content-center my-4">
-                    <button type="button" class="btn btn-success finishPurchase" data-product-id="{{productId}}" data-cart-id="{{cartId}}">Finish Purchase</button>
+                    <button type="button" class="btn btn-success finishPurchase" data-product-id="{{productId}}" data-cart-id="{{cartId}}">View Cart</button>
                 </div>
             {{/if}}
             <div class="d-flex justify-content-center">
